--- a/UserManagement/src/main/resources/application.properties
+++ b/UserManagement/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://localhost:3306/userData_1?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/userData?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
